# oscars

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
bruno/: bruno.json
bruno/bookings/: Create Booking.bru
bruno/vehicles/: Create Vehicle.bru  List Available.bru  Update Status.bru  Update Vehicle.bru
src/oscars/api/: deps.py  main.py  schemas.py
src/oscars/api/routers/: bookings.py  vehicles.py
src/oscars/application/: bookings.py  vehicles.py
src/oscars/domain/: entities.py  exceptions.py  repositories.py
src/oscars/infrastructure/: booking_repository.py  database.py  models.py  vehicle_repository.py
src/oscars/infrastructure/migrations/: env.py
src/oscars/infrastructure/migrations/versions/: 001_enable_btree_gist.py  002_create_vehicles.py  003_create_bookings.py  004_add_exclusion_constraint.py
tests/: conftest.py
tests/integration/: test_booking_repository.py  test_bookings_api.py  test_vehicle_repository.py  test_vehicles_api.py
tests/unit/application/: test_bookings.py  test_vehicles.py
tests/unit/domain/: test_entities.py
