[tool.poetry]
name = "oscars"
version = "0.1.0"
description = "Vehicle inventory management and calendar availability system"
authors = []
packages = [{include = "oscars", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.14"
pydantic-settings = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
httpx = "^0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
